--- a/app/assets/stylesheets/components/_universe.scss
+++ b/app/assets/stylesheets/components/_universe.scss
@@ -47,11 +47,11 @@
   position: relative;
   height: 300px;
   width: 300px;
-  border: 3px solid $wood;
+  border: 6px solid $wood;
   img {
     position: absolute;
-    left: -20px;
-    bottom: -20px;
+    left: -30px;
+    bottom: -30px;
   }
 }
 
@@ -106,8 +106,13 @@
   width: 150px;
 }
 
-.craftman-presentation {
-  height: 110px;
+.craftman-presentation-1 {
+  height: 150px;
+  width: 350px;
+}
+
+.craftman-presentation-2 {
+  height: 100px;
   width: 350px;
 }
 
