btn-default devenu btn-black et btn-default reste normal

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -35,7 +35,7 @@
             </div>
              <!-- button -->
             <div class="text-center">
-               <%= link_to "Edit profile", edit_profile_path, class: "btn btn-default margin-md" %>
+               <%= link_to "Edit profile", edit_profile_path, class: "btn btn-black margin-md" %>
             </div>
 
 
