--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -74,7 +74,7 @@
   color: white;
 }
 
-.btn-default {
+.btn-black {
   background: #152729;
   border-bottom: 3px solid #040707;
   border-radius: 0;
@@ -85,8 +85,20 @@
   color: #FFF;
 
 }
-.btn-default:hover {
+.btn-black:hover {
   color: #FFF;
   opacity: 0.95;
   background: #152729;
+}
+
+.btn-default {
+  border-radius: 0;
+  border-style: solid;
+  border-width: 0;
+  margin: 0 0 1.25rem;
+  border: 1px solid #040707;
+  width:70px;
+}
+.btn-default:hover {
+  background: white;
 }
