--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,7 @@
             </div>
 
             <div class="form-actions text-center">
-              <%= f.button :submit, "Sign up" %>
+              <%= f.button :submit, "Sign up", class: "btn btn-black"%>
             </div>
           <% end %>
           <div class="padded text-center">
