--- a/app/views/workshops/index.html.erb
+++ b/app/views/workshops/index.html.erb
@@ -54,7 +54,7 @@
                 </div>
               </div>
               <div class="text-center card-index-button">
-                <%= link_to "DETAILS", workshop_path(wksp), class: "btn btn-lg btn-default" %>
+                <%= link_to "DETAILS", workshop_path(wksp), class: "btn btn-lg btn-black" %>
               </div>
             </div>
           </div>
