--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -24,7 +24,7 @@
         <div class="txt-light"> <%= link_to "#{@workshop.universe.name}", universe_path(@workshop.universe), class: "text-uppercase" %> > <%= link_to "#{@workshop.craftman.job.name}", universe_workshops_path(@workshop.universe, anchor: @workshop.craftman.job.name) %> </div>
       </div>
       <div class="right">
-        <%= link_to "Contact the artisan", new_workshop_message_path(@workshop), class: "btn btn-default" %>
+        <%= link_to "Contact the artisan", new_workshop_message_path(@workshop), class: "btn btn-black" %>
       </div>
     </div>
   </div>
