--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,6 +2,36 @@
  * CSS code specific to home page
  * (margin/padding adjustments)
  * ------------------------------------- */
+.intro h1 {
+  color: $gray;
+}
+.vertical-line1 {
+  width: 2px;
+  height: 0;
+  background-color: $gray;
+  animation-name: vertical-lineone;
+  animation-duration: 3s;
+  animation-delay: 1s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
+  position: fixed;
+  left: 50%;
+  top: 0;
+  transform: translate(-50%);
+}
+@keyframes vertical-lineone {
+   0% {
+    height: 0;
+  }
+  50%{
+    height: 100%;
+    left: 50%;
+  }
+  100% {
+    height: 100%;
+    left: 50%;
+  }
+}
 
 .grid {
   padding: 20px 20px 100px 20px;
@@ -85,8 +115,3 @@
     min-width: 300px;
   }
 }
-// .cs-style-5 figure a {
-//   position: absolute;
-//   bottom: 20px;
-//   right: 20px;
-// }
