--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -237,3 +237,8 @@
   </div>
 
 <div id="white-margin"></div>
+
+<!-- TITLE -->
+<% content_for(:title_tag) do %>
+  DIWYH - <%= @universe.name %> universe and jobs
+<% end %>
