--- a/app/views/workshops/index.html.erb
+++ b/app/views/workshops/index.html.erb
@@ -92,4 +92,8 @@
   </script>
 <% end %>
 
+<!-- TITLE -->
+<% content_for(:title_tag) do %>
+  DIWYH - Explore <%= @universe.name %> workshops
+<% end %>
 
