--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -10,6 +10,8 @@
   z-index: 2000;
   position: absolute;
   width: 100%;
+  // visibility: hidden;
+  display: none;
 }
 .alert-info {
   background: $green;
