--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -365,3 +365,14 @@
 </div>
 
 <div id="white-margin"></div>
+
+
+
+<!-- TITLE -->
+<% content_for(:title_tag) do %>
+  <%= @workshop.title %> with <%= @workshop.craftman.first_name %> <%= @workshop.craftman.last_name %>
+<% end %>
+
+<% content_for :meta_title, "#{@workshop.title} with #{@workshop.craftman.first_name} #{@workshop.craftman.last_name}" %>
+<% content_for :meta_description, @workshop.description %>
+<%# content_for :meta_image, cloudinary_url(@workshop.photos.first.path) %>
