--- a/app/views/messages/_messages.html.erb
+++ b/app/views/messages/_messages.html.erb
@@ -1,5 +1,5 @@
       <ul class="messages" id="messages">
-        <% @messages.each do |message| %>
+        <% messages.each do |message| %>
           <%= render "messages/show", message: message %>
         <% end %>
       </ul>
