seed photos craftsmen et ateliers fini

--- a/app/assets/stylesheets/components/_universe.scss
+++ b/app/assets/stylesheets/components/_universe.scss
@@ -29,6 +29,12 @@
     width: 140px;
   }
 }
+.btn-banner {
+    position: absolute;
+    top: 220px;
+    left: 70px;
+    width: 140px;
+}
 .adaptation {
   position: absolute;
   width: 100%;
@@ -130,6 +136,7 @@ a:hover {
   height: 100px;
   width: 350px;
 }
+
 .backcolor {
   background-color: white;
 }
