une plus belle home

--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -80,11 +80,17 @@
 .margin-top-sm {
   margin-top: 22px;
 }
+.margin-top-md {
+  margin-top: 60px;
+}
 .no-margin-top {
   margin-top: 0;
 }
 .margin-end-page {
   margin-bottom: 100px;
+}
+.margin-bottom-md {
+  margin-bottom: 60px;
 }
 
 // Paddings
