chat-auto-refresh

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -19,4 +19,4 @@
   </div>
 </div>
 
-<%= link_to "refresh", remote: true  %>
+<%= link_to "", workshop_messages_path(@workshop), id: "refresh", remote: true %>
