--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for [ workshop, message ], remote: true  do |f| %>
   <%= f.error_notification %>
     <div class="message_input_wrapper">
-  <%= f.input :content, input_html: {class: "message_input"}, placeholder: "Type your message here...", label: false  %>
+  <%= f.input :content, input_html: {class: "message_input"}, placeholder: "Write a message...", label: false  %>
     </div>
       <%= f.button :submit, "Send", class: "text send_message" %>
 <% end %>
