--- a/app/assets/stylesheets/components/_universe.scss
+++ b/app/assets/stylesheets/components/_universe.scss
@@ -150,23 +150,24 @@ a:hover {
 
 .picture-one img {
   position: absolute;
-  width: 240px;
-  height: 240px;
+  width: 80%;
+  height: 250px;
 }
 
 
 .name-two {
   position:relative;
   top: 120px;
-  left: 175px;
+  left: 240px;
 }
 .picture-two {
   position: absolute;
+  width: 100%;
 }
 
 .name-three {
   position: relative;
-  top: 150px;
+  top: 240px;
   right: 50px;
   z-index: 2;
 }
