alignement pics show universe

--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -190,7 +190,7 @@
   <!-- Artisan #2 -->
 <div class="container-fluid">
   <div class="row">
-    <div class="padded-top-xl padding-top-xs-min-medium universe craftman">
+    <div class="padded-top-lg padding-top-xs-min universe craftman">
       <div class="col-xs-12 col-md-4 col-md-offset-2">
         <div>
           <div class="craftman-presentation-1 three txt-light">
@@ -203,11 +203,11 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-xs-offset-2 col-md-5 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-2 col-md-4 col-md-offset-0">
         <div class="presentation-pic">
           <div class="picture-two">
             <!-- photo du craftman -->
-            <%= cl_image_tag craftman_avatar(@second_craftman), width: 300, height: 240, crop: :crop %>
+            <%= cl_image_tag craftman_avatar(@second_craftman), width: 340, height: 240, crop: :crop %>
           </div>
           <div class=" name-two bottom-surlign <%= @universe.code %>">
             <!-- introduire en ruby le nom du craftman -->
