fix cards on index

--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -12,7 +12,7 @@
 // hr
 .upper-line hr {
   color: $gray;
-  background-color: $gray;
+  background-color: #979797;
   margin-top: 0px;
   margin-bottom: 5px;
   height: 1px;
@@ -25,8 +25,8 @@
   height: 1px;
 }
 .final-line hr {
-  color: $gray;
-  background-color: $gray;
+  color: #979797;
+  background-color: #979797;
   margin-top: 5px;
   margin-bottom: 0px;
   height: 1px;
@@ -39,9 +39,9 @@
   height: 1px;
 }
 .color-line hr {
-  color: $gray;
-  background-color: $gray;
-  height: 4px;
+  color: #979797;
+  background-color: #979797;
+  height: 1px;
   width: 100px;
   text-align: right;
   margin-right: 0px;
