--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -106,7 +106,7 @@
 
         <!-- mini map -->
         <div class="padded-md">
-          <div id="map" style="width: 330px; height: 330px;"></div>
+          <div id="map" style="width: 300px; height: 300px;"></div>
 
           <% content_for(:after_js) do %>
             <script>
@@ -216,7 +216,6 @@
       <div class="color-line-title-wood text-left padded-top-lg">
         <hr>
       </div>
-      <!-- <h2>the</h2> -->
       <h2 class="padded-bottom-lg">The craftsman</h2>
 
       <div class="row">
@@ -224,7 +223,9 @@
           <p class="txt-light"> <%= @workshop.craftman.description %> </p>
         </div>
         <div class="col-xs-2 col-xs-offset-1">
-          <%= image_tag @workshop.universe.artisan_profile.fullpath, height: 280, width: 280, crop: :fill%>
+          <div class="">
+            <%= cl_image_tag @workshop.craftman.avatar.path, height: 350, width: 500, crop: :fill, class: "image-pepe" %>
+          </div>
         </div>
       </div>
 
@@ -233,7 +234,7 @@
           <h4>“There is a magical, contemplative feeling in the forest.”</h4>
         </div>
         <div class="col-xs-2 col-xs-offset-2">
-          <%= image_tag @workshop.universe.artisan_hands.fullpath, height: 120, width: 120, crop: :fill %>
+          <%= image_tag @workshop.universe.artisan_hands.fullpath, height: 200, width: 200, crop: :fill %>
         </div>
       </div>
   </div>
