--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -332,7 +332,7 @@
           <div class="col-xs-12 col-sm-4">
             <div class="card-index">
               <div class="card-img">
-                <%= cl_image_tag workshop_pic(wksp), height: 150, width: 315, crop: :fill %>
+                <%= cl_image_tag workshop_pic(wksp), height: 200, width: 324, crop: :fill %>
                 <div class="col-xs-12 text-center craftman-name">
                 </div>
               </div>
@@ -343,28 +343,28 @@
                   <div class="row">
                     <div class="col-md-3">
                       <div class="upper-line"><hr></div>
-                      <h6 class="txt-regular">Where</h6>
+                      <h6 class="txt-regular roboto">Where</h6>
                     </div>
                     <div class="col-md-9">
                       <div class="upper-line-left"><hr></div>
-                      <h6 class="txt-light"><%= wksp.craftman.locality %></h6>
+                      <h6 class="txt-light roboto"><%= wksp.craftman.locality %></h6>
                     </div>
                   </div>
                   <div class="row">
                     <div class="col-md-3">
                       <div class="upper-line"><hr></div>
-                      <h6 class="txt-regular">Price</h6>
+                      <h6 class="txt-regular roboto">Price</h6>
                       <div class="final-line"><hr></div>
                     </div>
                     <div class="col-md-9">
                       <div class="upper-line-left"><hr></div>
-                      <h6 class="txt-light"><%= wksp.price.to_i %>€/day</h6>
+                      <h6 class="txt-light roboto"><%= wksp.price.to_i %>€/day</h6>
                       <div class="final-line-left"><hr></div>
                     </div>
                   </div>
                 </div>
                 <div class="text-center card-index-button">
-                  <%= link_to "DETAILS", workshop_path(wksp), class: "btn btn-lg btn-black" %>
+                  <%= link_to "DETAILS", workshop_path(wksp), class: "txt-light btn btn-lg btn-black" %>
                 </div>
               </div>
             </div>
