chat front message

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -123,6 +123,16 @@ text-decoration: none;
   margin-bottom: 10px;
 }
 
+.point {
+  position: absolute;
+  top: 26px;
+  left: -50px;
+}
+
+.link-style {
+  color: $gray;
+}
+
 
 
 
