--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -135,7 +135,7 @@
         <div class="color-line-title-<%= @universe.code %> padded-top-lg">
           <hr>
         </div>
-        <h2 class="padded-bottom-lg">Meet ours craftsman</h2>
+        <h2 class="padded-bottom-lg">Meet some of ours craftsmen</h2>
         <!-- <h2 class="padding-left-xl">craftmen</h2> -->
       </div>
     </div>
