--- a/app/assets/stylesheets/components/_chat.scss
+++ b/app/assets/stylesheets/components/_chat.scss
@@ -1,12 +1,10 @@
 
 .chat_window {
   max-width: 80%;
-  height: 450px;
-  margin-top: 100px;
+  height: 500px;
+  margin-top: 80px;
   margin-bottom: 50px;
-  //box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
   overflow: hidden;
-  //border-top: 1px solid #a39999;
 }
 
 // .top_menu {
@@ -64,8 +62,8 @@
   float: left;
 }
 .messages .message.left .text_wrapper {
-  background-color: white;
-  border: 1px solid rgba(#926f34, 0.6);
+  background-color: #713538;
+  border: 1px solid rgba(#713538, 0.6);
   margin-left: 20px;
   border-radius: 2px;
 }
@@ -106,7 +104,6 @@
 .messages .message .text_wrapper {
   display: inline-block;
   padding: 20px;
-  // border-radius: 6px;
   width: calc(100% - 85px);
   min-width: 100px;
   max-width: 100%;
@@ -131,11 +128,10 @@
 }
 .messages .message .text_wrapper .text {
   font-size: 18px;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 .bottom_wrapper {
-  // position: relative;
   width: 100%;
   padding: 10px 10px;
 }
