--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -9,15 +9,23 @@
       <div class="row">
 
 
-        <div class="col-xs-6">
+        <div class="col-xs-3">
           <div class="header-chat-1">
-            <p class="text-left"><%= @workshop.craftman.first_name %> <%= @workshop.craftman.last_name %></p>
+            <p class="text-left">
+              <%= @workshop.craftman.first_name %> <%= @workshop.craftman.last_name %>
+            </p>
           </div>
         </div>
 
-        <div class="col-xs-6">
+        <div class="col-xs-1">
+          <div class="text-center">
+              <div class="green-circle point"></div>
+          </div>
+        </div>
+
+        <div class="col-xs-8">
           <div class="header-chat-2">
-          <p class="text-right"><%= link_to "Go to dashboard", dashboard_path %></p>
+          <p class="text-right"><%= link_to "Go to dashboard", dashboard_path, class: "link-style" %></p>
           </div>
         </div>
 
