--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -97,6 +97,17 @@ text-decoration: none;
   width: 100%;
   position: relative;
 }
+.image-card-filter {
+  width: 100%;
+  height: 160px;
+  position: absolute;
+  top:5px;
+  bottom:0;
+  left:0;
+  right:0;
+  z-index: 1000;
+  background: linear-gradient(-225deg, rgba(0,101,168,0.2) 0%, rgba(0,36,61,0.4) 50%);
+}
 .flex-card-1 {
   position: absolute;
   text-align: center;
@@ -104,6 +115,7 @@ text-decoration: none;
   left: 0%;
   width: 100%;
   color: white;
+  z-index: 1001;
 }
 .flex-card-2 {
   position: absolute;
@@ -112,6 +124,7 @@ text-decoration: none;
   left: 0%;
   width: 100%;
   color: white;
+  z-index: 1001;
 }
 .no-padding {
   padding: 0;
