--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -152,9 +152,10 @@
                       <div class="col-xs-5 col-sm-5">
                       <!-- photo  -->
                         <div class="image-card padded-top-xs padded-bottom-xs">
-                          <%= cl_image_tag wksp.photos.first.path, height: 160, width: 280, crop: :fill, style: "background: rgba(0,36,61,0.6)" %>
+                          <%= cl_image_tag wksp.photos.first.path, height: 160, width: 278, crop: :fill %>
                             <p class="flex-card-1 txt-gras"><%= wksp.craftman.first_name %> </p>
                             <p class="flex-card-2 txt-gras"><%= wksp.craftman.last_name %></p>
+                            <div class="image-card-filter"></div>
                         </div>
 
                       </div>
