compact craftsman names in cards

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -95,13 +95,14 @@
 }
 .craftman-name {
   position: absolute;
-  top: 50px;
+  top: 60px;
   color: white;
   font-weight: 400;
   z-index: 1001;
 }
 .craftman-name p {
   text-align: center;
+  margin: 0;
 }
 // Cards pour les reviews
 .card-white {
