--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -104,9 +104,9 @@
   border: 1px solid #040707;
   // width:70px;
 }
-.btn-default:hover {
-  background: white;
-}
+// .btn-default:hover {
+//   background: white;
+// }
 
 .btn-banner.btn-default {
   width: 250px;
