--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row padded">
       <div class="col-xs-12 col-sm-6 col-sm-offset-4">
         <div class="border-form margin-top-xs form-height-width-md" style="background-size: cover !important;background-image: url('<%= image_url "glass_univers.jpg" %>');">
           <div class="background-form bottom-left-form border-glass">
@@ -21,17 +21,12 @@
                 <%= f.input :password_confirmation, required: true %>
               </div>
 
-<<<<<<< HEAD
-            <div class="form-actions text-center">
-              <%= f.button :submit, "Sign up", class: "btn btn-black"%>
-=======
               <div class="form-actions text-center">
-                <%= f.button :submit, "Sign up" %>
+                <%= f.button :submit, "Sign up", class: "btn btn-black"%>
               </div>
             <% end %>
-            <div class="padded text-center">
+            <div class="text-center">
              <%= render "devise/shared/links" %>
->>>>>>> 8244977559cf4a199cab2d88df1bf26392d7e5a8
             </div>
           </div>
         </div>
