--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -33,6 +33,6 @@ $orange: #E67E22;
 $green: #32B796;
 $gray: #131313;
 $wood: #ECC05C;
-$gold1: rgba(#dfbe6a, .8);
-$gold2: rgba(#926f34, .8);
+$gold1: rgba(#dfbe6a, 1);
+$gold2: rgba(#926f34, 1);
 $brown: $wood;
