--- a/app/assets/stylesheets/components/_universe.scss
+++ b/app/assets/stylesheets/components/_universe.scss
@@ -106,11 +106,13 @@
   h3 {
     color: white;
     top: 150px;
+    transition: all 0.3s ease;
   }
 }
 .card-job h3:hover {
   font-size: 34px;
   text-decoration: none;
+  transition: all 0.3s ease;
 }
 
 a:hover {
