--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,15 +1,15 @@
 
-<div class="padded-md">
+<div class="">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-sm-offset-3">
         <div class="background-form chat_window">
-          <h2 class="text-center txt-light">Contact <%= @workshop.craftman.first_name %> <%= @workshop.craftman.last_name %></h2>
+          <h2 class="text-center txt-light padded-lg">Contact <%= @workshop.craftman.first_name %> <%= @workshop.craftman.last_name %></h2>
           <%= simple_form_for [@workshop, @message], url: workshop_create_first_message_path(@workshop, current_user) do |f| %>
             <%= f.error_notification %>
-            <%= f.input :date_checkin, as: :string, input_html:{type: "date"}, label: "From", class: "txt-light" %>
-            <%= f.input :date_checkout, as: :string, input_html:{type: "date"}, label: "To", class: "txt-light" %>
-            <%= f.input :content, label: "Start to dialogue with the craftsman you selected", class: "txt-light"  %>
+            <%= f.input :date_checkin, as: :string, input_html:{type: "date", value:  Date.today }, label: false, class: "txt-light" %>
+            <%= f.input :date_checkout, as: :string, input_html:{type: "date", value:  Date.today + 1 }, label: false, class: "txt-light" %>
+            <%= f.input :content, label: false, placeholder: "Start to dialogue with the craftsman you selected", class: "txt-light"  %>
 
             <div class="text-center">
               <%= f.button :submit, "SEND", class: "btn btn-message" %>
