--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -122,7 +122,7 @@
   top: -65px;
 }
 .card-white-quote p {
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
 }
 .card-white-avatar {
   position: absolute;
