--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -118,3 +118,19 @@
     min-width: 300px;
   }
 }
+
+.universe-gate {
+  position: relative;
+}
+
+.universe-gate-filter {
+  width: 100%;
+  height: 300px;
+  position: absolute;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  z-index: 1000;
+  background: linear-gradient(-225deg, rgba(0,101,168,0.2) 0%, rgba(0,36,61,0.3) 50%);
+}
