--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,9 +37,10 @@
         <li>
           <%= link_to universe_path(universe) do  %>
             <figure>
-              <div >
+              <div class="universe-gate">
                 <%= cl_image_tag universe.banner.fullpath, height: 300, width: 480, crop: :crop %>
                 <h2 class="text-uppercase"> <%= universe.name %> </h2>
+                <div class="universe-gate-filter"></div>
               </div>
               <figcaption style="background-image: url('<%= cl_image_path universe.collage.path %>')";>
               </figcaption>
